--- a/enhance/stylesheet.css
+++ b/enhance/stylesheet.css
@@ -32,6 +32,7 @@ pre {
 }
 
 #titleword{
+	font-family:Trebuchet MS;
 	float:left;
 	width:auto;
 	margin-left:40px;
@@ -81,11 +82,12 @@ pre {
 }
 
 .footer {
-	color:#D2D3D6;
+	color:#B1B1B3;
+	font-size:10px;
 	text-align:center;
 	width:auto;
 	margin-left:140px;
 	margin-right:20px;
 	margin-top:50px;
-	border-top:#D2D3D6 2px solid;
+	border-top:#B1B1B3 1px solid;
 }
