--- a/enhance/stylesheet.css
+++ b/enhance/stylesheet.css
@@ -22,12 +22,13 @@ div {
 }
 
 .main a{
-	color:#4DBCF7;
+	color:#233E70;
+	font-weight:bold;
 	text-decoration:none;
 }
 
 .main a:visited{
-		color:#2D7296;
+		color:#3862B0;
 		text-decoration:none;
 }
 
